# LazyInputSwitcher

./: Cargo.toml  README.md
.github/workflows/: build release.yml  run tests.yml
src/: main.rs
src/core/: lib.rs
src/parser/: adapter.rs  mod.rs
src/parser/language/: c.rs  lua.rs  mod.rs  python.rs
src/rpc/: request.rs  response.rs  socket.rs
src/static/LinuxMethodShell/: check.sh
src/static/LinuxMethodShell/fcitx5/: check.sh  config.sh  query.sh  switch.sh
src/static/TreeSitterQuery/: bash.scm  c.scm  cpp.scm  csharp.scm  go.scm  java.scm  javascript.scm  kotlin.scm  lua.scm  php.scm  python.scm  sql.scm  typescript.scm
src/switch/: mod.rs
src/switch/linux/: fcitx5.rs  lib.rs  mod.rs
src/switch/macos/: mod.rs  switcher.rs  tis.rs
src/switch/windows/: focus.rs  mod.rs  switch.rs
src/tests/: mod.rs  parse_load_tests.rs  parser_tests.rs  rpc_tests.rs
