[package]
name = "LazyInputSwitcher"
version = "0.2.0"
edition = "2024"

[build-dependencies]
cc="*"

[dependencies.windows]
version = "0.62.2"
features = ["Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging", "Win32_UI_Input_Ime"]

[dependencies.serde]
version = "1.0.228"
features = ["derive"]

[dependencies]
rust-embed = "8.9.0"
serde_json = "1.0.145"
tree-sitter = "0.25.1"
tree-sitter-rust = "0.24.0"
tree-sitter-python = "0.25.0"
tree-sitter-lua = "0.2.0"
tree-sitter-c = "0.24.1"
tree-sitter-java = "0.23.5"
tree-sitter-javascript = "0.25.0"
