[package]
name = "LazyInputSwitcher"
version = "0.1.4"
edition = "2024"

[build-dependencies]
cc="*"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_Ime"
]}

[target.'cfg(target_os = "linux")'.dependencies]
configparser = "3.1.0"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2.1"
core-foundation = "0.10.1"
core-foundation-sys = "0.8.7"

[dependencies.serde]
version = "1.0.228"
features = ["derive"]

[dependencies]
rust-embed = "8.9.0"
serde_json = "1.0.145"
tree-sitter = "0.26.3"
tree-sitter-rust = "0.24.0"
tree-sitter-python = "0.25.0"
tree-sitter-lua = "0.4.1"
tree-sitter-c = "0.24.1"
tree-sitter-java = "0.23.5"
tree-sitter-javascript = "0.25.0"
tree-sitter-kotlin-ng = "1.1.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-cpp = "0.23.4"
tree-sitter-go = "0.25.0"
tree-sitter-bash = "0.25.1"
tree-sitter-sequel = "0.3.11"
